--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,6 +128,10 @@ emblematic = "emblematic.__main__:main"
 #          3.10.1  →  == 3.10.1
 
 python = "^3.10"
+cairosvg = "^2.6.0"
+click = "^8.1.3"
+beautifulsoup4 = "^4.11.2"
+lxml = "^4.9.2"
 
 
 
@@ -136,8 +140,14 @@ python = "^3.10"
 # Development dependencies   #
 ##############################
 # Same as above, but these dependencies are installed only if the project is being installed in development mode.
-# They are excluded from the final build.Sphinx = "^4.3.2"
-sphinx-rtd-theme = "^1.0.0"[tool.poetry.extras]
+# They are excluded from the final build.
+
+Sphinx = "^4.3.2"
+sphinx-rtd-theme = "^1.0.0"
+
+
+
+[tool.poetry.extras]
 ####################
 # Package extras   #
 ####################
