--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,8 +3,10 @@ version: 2
 python:
    install:
       - path: "."
+        extra_requirements:
+            - dev
 
 build:
-   os: "ubuntu-20.04"
+   os: "ubuntu-22.04"
    tools:
-      python: "3.10"
+      python: "3.11"
