--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,7 +4,7 @@ python:
    install:
       - path: "."
         extra_requirements:
-            - dev
+            - docs
 
 build:
    os: "ubuntu-22.04"
