--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,18 +138,8 @@ click = "^8.1.3"
 beautifulsoup4 = "^4.11.2"
 lxml = "^4.9.2"
 
-
-
-[tool.poetry.group.dev.dependencies]
-##############################
-# Development dependencies   #
-##############################
-# Same as above, but these dependencies are installed only if the project is being installed in development mode.
-# They are excluded from the final build.
-
-Sphinx = "^7.2.6"
-sphinx-rtd-theme = "^1.2.0"
-
+Sphinx = { version = "^7.2.6", optional = true }
+sphinx-rtd-theme = { version = "^1.2.0", optional = true }
 
 
 [tool.poetry.extras]
@@ -159,6 +149,7 @@ sphinx-rtd-theme = "^1.2.0"
 # ADVANCED: specify optional dependency groups.
 # See: https://python-poetry.org/docs/pyproject/#extras
 
+docs = ["Sphinx", "sphinx-rtd-theme"]
 
 
 [tool.poetry.plugins]
