Replace Better TOML with Even Better TOML

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
     "recommendations": [
         "ms-python.python",
-        "bungcip.better-toml",
+        "tamasfe.even-better-toml",
     ]
 }
